Address style bugs: space between default container and projects, title project overflow, and detail dialog too little if no content

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,6 +83,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-bottom: 1rem;
 }
 
 #default button {
@@ -304,6 +305,7 @@ label {
 
 .project h2 {
   -webkit-line-clamp: 1;
+  max-width: 10rem;
 }
 
 .project p,
@@ -466,6 +468,7 @@ label {
   flex-direction: column;
   gap: 0.5rem;
   margin-bottom: 2rem;
+  min-width: 740px;
 }
 
 #todo-detail-dialog #detail-description,
